2005-12-20  Paolo Bonzini  <bonzini@gnu.org>

        Revert Ada-related part of the previous change.

        * Makefile.def (ADAFLAGS, BOOT_ADAFLAGS, ADAFLAGS_FOR_TARGET):
        Do not pass.
        * Makefile.tpl (BOOT_ADAFLAGS): Do not define.
        * Makefile.in: Regenerate.
        * configure.in: Do not include mt-ppc-aix target fragment.
        * configure: Regenerate.

2005-12-19  Paolo Bonzini  <bonzini@gnu.org>

	* configure.in: Select appropriate fragments for PowerPC/AIX.
	* configure: Regenerate.

	* Makefile.def (flags_to_pass): Add ADAFLAGS, BOOT_ADAFLAGS,
	BOOT_CFLAGS, BOOT_LDFLAGS.
	* Makefile.tpl (POSTSTAGE1_FLAGS_TO_PASS): Handle BOOT_ADAFLAGS,
	BOOT_CFLAGS, BOOT_LDFLAGS.
	(TARGET_FLAGS_TO_PASS): Handle ADAFLAGS_FOR_TARGET.
	(stage[+id+]-bubble): Pass flags recursively to the comparison target.
	(stage): Fail if we cannot complete the work.
	* Makefile.in: Regenerate.

2005-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* COPYING.NEWLIB: Update copyright year for default
	copyright.

2005-12-15  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.tpl (all, do-[+make_target+], do-check, install,
	install-host-nogcc): Don't invoke $(stage) at the end.
	* Makefile.in: Regenerate.

2005-12-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.in: Flip the top-level bootstrap switch.
	* configure: Regenerate.

	Merge from gcc:

	2005-12-14  Daniel Jacobowitz  <dan@codesourcery.com>

        * Makefile.tpl: Throughout the file, use : $(MAKE) along with
        $(stage) and $(unstage).
        (EXTRA_TARGET_FLAGS): Correct double-quoting.
        (all): Remove stray semicolon.
        (local-distclean): Don't handle multilib.tmp and multilib.out.
        (install.all): Set $s for consistency.
        (configure-[+prefix+][+module+]): Instead of [+deps+], handle
        check_multilibs setting.  Always make the install directory.
        (configure-stage[+id+]-[+prefix+][+module+]): Likewise.
        Correct @if/@endif.